--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <title>Оформлення з України</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;1,700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
   <link rel="stylesheet" href="css/reset.css" />
@@ -27,23 +26,23 @@
         <a class="nav__logo" href="#">
           <img class="nav__img" src="img/logo.webp" alt="logo">
         </a>
-        <a href="#law-and-law" class="button button--ghost">закон і право</a>
         <div class="nav__menu">
           <ul class="nav__list">
             <li class="nav__item">
+              <img src="img/free-icon-id-card-148860.png" alt="" class="nav__img">
               <a href="#what-you-get" class="nav__link active-link">що ви отримаєте?</a>
             </li>
             <li class="nav__item">
+              <img src="img/free-icon-diploma-148969.png" alt="" class="nav__img">
               <a href="#reviews-and-guarantees" class="nav__link active-link">відгуки та гарантії</a>
             </li>
             <li class="nav__item">
+              <img src="img/free-icon-paper-plane-149063.png" alt="" class="nav__img">
               <a href="#questionnaire" class="nav__link active-link">заповнити анкету</a>
             </li>
             <li class="nav__item">
+              <img src="img/free-icon-street-149056.png" alt="" class="nav__img">
               <a href="#" class="nav__link active-link">що потрібно зробити</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link active-link">що ви отримаєте?</a>
             </li>
 
             <a class="nav__tg" href="https://t.me/bezcordona">
@@ -55,6 +54,7 @@
 
           </ul>
         </div>
+        <a href="#law-and-law" class="button button--ghost"><img src="img/free-icon-archive-149012.png" alt="" class="nav__img">закон і право</a>
         <div class="nav__toggle" id="toggle">
           <p>Меню</p>
           <div><i class='bx bx-menu'></i></div>
@@ -87,7 +87,7 @@
             <li class="legal__info-item">Абсолютно законний спосіб!</li>
           </ul>
           <div class="places">
-            <div class="places__title">Набір до нової групи <br>
+            <div class="places__title">Набір до нової групи
               за ціною 2300 USDT</div>
             <div class="places__content">
               залишилось
@@ -114,9 +114,6 @@
           d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z">
         </path>
       </svg>
-    </div>
-    <div class="animation__text">
-      <p>Легальний виїзд за кордон</p>
     </div>
     <div class="animation__cloud-unit">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
@@ -209,28 +206,28 @@
   <section class="result" id="what-you-get">
     <div class="container">
       <div class="result__inner">
-        <div class="result__title">
-          <p>ЩО ВИ ОТРИМАЄТЕ</p>
-        </div>
+        <h2 class="result__title title">
+         <span> <img class="title__img" src="img/free-icon-id-card-148860.png" alt=""> ЩО ВИ ОТРИМАЄТЕ</span>
+        </h2>
         <div class="benefits">
           <div class="benefits__item">
             <div class="benefits__icon"><i class="icon fal fa-diploma"></i></div>
-            <div class="benefits__title">
-              ЗАРАХУВАННЯ ДО ВНЗ </div>
+            <h3 class="benefits__title">
+              ЗАРАХУВАННЯ ДО ВНЗ </h3>
             <div class="benefits__text">
               Підтвердження про зарахування на навчання до європейського ВНЗ (оригінал) </div>
           </div>
           <div class="benefits__item">
             <div class="benefits__icon"><i class="icon fal fa-graduation-cap"></i></div>
-            <div class="benefits__title">
-              СТУДЕНТСЬКИЙ КВИТОК </div>
+            <h3 class="benefits__title">
+              СТУДЕНТСЬКИЙ КВИТОК </h3>
             <div class="benefits__text">
               Студентський квиток вузу, до якого зараховані (оригінал) </div>
           </div>
           <div class="benefits__item">
             <div class="benefits__icon"><i class="icon fal fa-address-card"></i></div>
-            <div class="benefits__title">
-              ОФІЦІЙНИЙ РЕЄСТР </div>
+            <h3 class="benefits__title">
+              ОФІЦІЙНИЙ РЕЄСТР </h3>
             <div class="benefits__text">
               Зарахування до комп'ютерної бази студентів Польщі з 2021 року </div>
           </div>
@@ -245,10 +242,11 @@
   <section class="reviews" id="reviews-and-guarantees">
     <div class="container">
       <div class="reviews__inner">
-        <p class='reviews__title'>ВІДГУКИ ТА ГАРАНТІЇ</p>
-        <p class="reviews__desc">НАЙКРАЩІ ВІДГУКИ ВІД НАШИХ КЛІЄНТІВ – ЦЕ ФАКТ ОТРИМАНИХ ДОВІДОК ПРО ВІДСТРОЧЕННЯ ТА
+        <h2 class="reviews__title title">
+          <span> <img class="title__img" src="img/free-icon-diploma-148969.png" alt="">ВІДГУКИ ТА ГАРАНТІЇ</span>
+        </h2>
+        <p class="title__desc">НАЙКРАЩІ ВІДГУКИ ВІД НАШИХ КЛІЄНТІВ – ЦЕ ФАКТ ОТРИМАНИХ ДОВІДОК ПРО ВІДСТРОЧЕННЯ ТА
           ПЕРЕТИН КОРДОНІВ.</p>
-        <img class="reviews__map" src="img/poland_and_ukraine-1.png" alt="map">
         <div class="reviews__slider">
           <div class="reviews__slider-item">
             <div class="reviews__slider-wrapper"><img src="img/reviews/slide1 (1).jpg" alt=""></div>
@@ -287,11 +285,7 @@
     <div class="container">
       <div class="reach__inner">
         <div class="reach__info">
-          <p class="reach__title">ЗАПОВНИТИ АНКЕТУ</p>
-          <p class="reach__desc">
-            Залишіть свій контакт, ми з Вами зв’яжемося і все пояснимо!
-          </p>
-          <p class="reach__text">Легальний виїзд чоловіків з України!</p>
+          <h2 class="reach__title title"> <img class="title__img" src="img/free-icon-paper-plane-149063.png" alt="">ЗАПОВНИТИ АНКЕТУ</h2>
           <ul class="reach__list">
             <li class="reach__item">Оформлення документів 7 - 10 роб. днів</li>
             <li class="reach__item">Абсолютно законний спосіб!</li>
@@ -351,24 +345,28 @@
   <section class="todo">
     <div class="container">
       <div class="todo__inner">
-        <p class="todo__title">
-          Що потрібно зробити?
-        </p>
-        <p class="todo__desc">Тут описані рекомендації, яких Ви повинні дотримуватись для успішного перетину кордону між
-          Україною та ЄС.</p>
-        <ol class="todo__list">
-          <li class="todo__item"><span>ОТРИМАЙТЕ ДОКУМЕНТИ</span><br>Отримайте у нас документ про зарахування до вищого
-            навчального закладу. </li>
-
-          <li class="todo__item"><span>ЗРОБІТЬ ПЕРЕКЛАД</span><br>Знайдіть перекладача, який зробить нотаріальний
-            переклад ваших документів з польської мови на українську мову та попередньо запишіться до нього </li>
-
-          <li class="todo__item"><span>ОТРИМАЙТЕ ДОВІДКУ З ВІЙСЬККОМАТУ</span><br>Сходіть у військкомат та отримайте
-            відстрочку на основі переведених документів.</li>
-
-          <li class="todo__item"><span>ПЕРЕТНІТЬ КОРДОН</span><br>Виконуйте наші рекомендації по перетину кордону.</li>
-        </ol>
-        <div class="todo__button"><button class="button">Залишити заявку</button></div>
+      <div class="todo__left">
+          <h2 class="todo__title title">
+            <span> <img class="title__img" src="img/free-icon-street-149056.png" alt="">Що потрібно зробити?</span>
+           </h2>
+            <p class="title__desc">Тут описані рекомендації, яких Ви повинні дотримуватись для успішного перетину кордону між
+              Україною та ЄС.</p>
+          <ol class="todo__list">
+            <li class="todo__item"><h3>ОТРИМАЙТЕ ДОКУМЕНТИ</h3><br>Отримайте у нас документ про зарахування до вищого
+              навчального закладу. </li>
+  
+            <li class="todo__item"><h3>ЗРОБІТЬ ПЕРЕКЛАД</h3><br>Знайдіть перекладача, який зробить нотаріальний
+              переклад ваших документів з польської мови на українську мову та попередньо запишіться до нього </li>
+  
+            <li class="todo__item"><h3>ОТРИМАЙТЕ ДОВІДКУ З ВІЙСЬККОМАТУ</h3><br>Сходіть у військкомат та отримайте
+              відстрочку на основі переведених документів.</li>
+  
+            <li class="todo__item"><h3>ПЕРЕТНІТЬ КОРДОН</h3><br>Виконуйте наші рекомендації по перетину кордону.</li>
+          </ol>
+          <button class="button">Залишити заявку</button>
+         
+      </div>
+      <video src="img/video.mov" class="todo__right" controls></video>
       </div>
     </div>
   </section>
@@ -376,11 +374,13 @@
     <canvas id="canvas-basic"></canvas>
     <div class="container">
       <div class="info__inner">
-        <p class="info__title">АКТУАЛЬНА ІНФОРМАЦІЯ</p>
+        <h2 class="info__title title">
+          <span> <img class="title__img" src="img/free-icon-archive-149012.png" alt="">АКТУАЛЬНА ІНФОРМАЦІЯ</span>
+         </h2>
         <div class="text-window">
-          <p class="text-window__title">
-            <span><strong>[</strong></span>Указ від 4 Травня <span><strong>]</strong></span>
-          </p>
+          <h3 class="text-window__title">
+            <span><strong>[</strong></span> Указ від 4 Травня <span><strong>]</strong></span>
+          </h3>
           <p>Кабінет Міністрів України вніс зміни до Правил перетину державного кордону громадянами України,
             затверджених постановою Кабінету Міністрів України від 27.01.1995 № 57 (далі – Правил).</p>
           <p>Так, громадяни України чоловічої статі віком від 18 до 60 років можуть виїхати за кордон за умови:</p>
@@ -427,8 +427,7 @@
             відповідного центру комплектування за місцем прописки (можна отримати на підставі примітки про відстрочення
             та документи, що підтверджують навчання в іноземному ВНЗ).</p>
         </div>
-        <div class="info__button"><button class="button" id="toggle-btn">Розгорнути/згорнути <i
-              class="icon fal fa-sort-alt"></i></button>
+        <div class="info__button"><button class="button first" id="toggle-btn">Розгорнути</button>
         </div>
         <div class="info__button blue"><button class="button">Замовити документ</button></div>
       </div>
