--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </li>
             <li class="nav__item">
               <img src="img/free-icon-street-149056.png" alt="" class="nav__img">
-              <a href="#" class="nav__link active-link">що потрібно зробити</a>
+              <a href="#todo" class="nav__link active-link">що потрібно зробити</a>
             </li>
 
             <a class="nav__tg" href="https://t.me/bezcordona">
@@ -62,7 +62,7 @@
       </nav>
     </div>
   </header>
-  <section class="legal">
+  <section class="legal" id="legal">
     <div class="container">
       <div class="legal__inner">
         <div class="slider">
@@ -342,7 +342,7 @@
     </div>
     <!--Waves end-->
   </section>
-  <section class="todo">
+  <section class="todo" id="todo">
     <div class="container">
       <div class="todo__inner">
       <div class="todo__left">
@@ -371,21 +371,21 @@
     </div>
   </section>
   <section class="info" id="law-and-law">
-    <canvas id="canvas-basic"></canvas>
     <div class="container">
       <div class="info__inner">
         <h2 class="info__title title">
           <span> <img class="title__img" src="img/free-icon-archive-149012.png" alt="">АКТУАЛЬНА ІНФОРМАЦІЯ</span>
          </h2>
-        <div class="text-window">
+        <div class="text-window text-window_first">
           <h3 class="text-window__title">
             <span><strong>[</strong></span> Указ від 4 Травня <span><strong>]</strong></span>
           </h3>
-          <p>Кабінет Міністрів України вніс зміни до Правил перетину державного кордону громадянами України,
+          <img src="img/img-22-300x200-small.webp" alt="">
+          <p class="first">Кабінет Міністрів України вніс зміни до Правил перетину державного кордону громадянами України,
             затверджених постановою Кабінету Міністрів України від 27.01.1995 № 57 (далі – Правил).</p>
-          <p>Так, громадяни України чоловічої статі віком від 18 до 60 років можуть виїхати за кордон за умови:</p>
+          <p class="second">Так, громадяни України чоловічої статі віком від 18 до 60 років можуть виїхати за кордон за умови:</p>
           <ul>
-            <li>Є одержувачами професійної вищої та вищої освіти за кордоном (студентський квиток або студентська віза
+            <li class="third">Є одержувачами професійної вищої та вищої освіти за кордоном (студентський квиток або студентська віза
             </li>
             <li>Перекладено та нотаріально засвідчені документи про зарахування/навчання особи у закордонному вузі</li>
             <li>Військово-облікові документи із записом щодо надання ним відстрочки від призову (заклику з мобілізації),
@@ -436,52 +436,44 @@
   <section class="faq">
     <div class="container">
       <div class="faq__inner">
-        <h1>ЧАСТІ ЗАПИТАННЯ ТА ВІДПОВІДІ</h1>
+        <h2 class="faq__title title">
+          <span> <img class="title__img" src="img/free-icon-list-148966.png" alt="">ЧАСТІ ЗАПИТАННЯ ТА ВІДПОВІДІ</span>
+         </h2>
         <ul>
           <li>
-            <input type="checkbox" checked>
-            <i></i>
-            <h2>До якого віку можна стати сдудентом польського ВНЗ?</h2>
+            <h3>До якого віку можна стати сдудентом польського ВНЗ?</h3>
             <p>Немає вікового обмеження, оскільки людина має право вчитися та вдосконалюватися все життя. Вік живи - вік
               учись.</p>
           </li>
           <li>
-            <input type="checkbox" checked>
-            <i></i>
-            <h2>Жив у Києві там і прописаний, зараз перебуваю у Львові, проте відстрочку за вашими документами можна
-              отримати лише за пропискою. Що робити, щоб не їхати до Києва?</h2>
+            <h3>Жив у Києві там і прописаний, зараз перебуваю у Львові, проте відстрочку за вашими документами можна
+              отримати лише за пропискою. Що робити, щоб не їхати до Києва?</h3>
             <p>Якщо ви прописані у Києві, але мешкаєте у Львові, вам потрібно стати на облік як біженець і отримати
               довідку ВПО. На підставі цієї довідки ви можете податися за місцем фактичного знаходження до міського
               військкомату для отримання відстрочки на підставі Студента, не виїжджаючи на місце прописки.</p>
           </li>
           <li>
-            <input type="checkbox" checked>
-            <i></i>
-            <h2>Що робити, якщо на кордоні запитають чому військкомат не поставив печатку про відстрочку у приписному
+            <h3>Що робити, якщо на кордоні запитають чому військкомат не поставив печатку про відстрочку у приписному
               свідоцтві, але видав довідку про те, що я не є військовозобов'язаним до кінця навчання, наприклад, до 2024
-              року.</h2>
+              року.</h3>
             <p>Спокійно відповідайте на запитання. Поясніть, що ви біженець, обов'язково покажіть довідку ВПО, тому що
               військкомат туди теж ставить друк. Ця процедура потрібна тільки тим, хто не робитиме відстрочку за
               фактичною пропискою.</p>
           </li>
           <li>
-            <input type="checkbox" checked>
-            <i></i>
-            <h2>Як я можу перевірити, що є студентом? Як це можуть зробити уповноважені особи?</h2>
+            <h3>Як я можу перевірити, що є студентом? Як це можуть зробити уповноважені особи?</h3>
             <p>Коли нотаріус завірятиме переклад ваших документів, він обов’язково перевірить їхню справжність. Так само
               вчинять у військкоматі, перед тим, як дати вам відстрочку. При перетині вами кордону українські
               прикордонники зателефонують до польського ВНЗ. Польські прикордонники мають доступ до загальної бази, де
               ви будете вже вказані як студент 2-го курсу.</p>
           </li>
           <li>
-            <input type="checkbox" checked>
-            <i></i>
-            <h2>Через які пункти пропуску найкраще виїжджати?</h2>
-            <p>Ягодин</p>
-            <p>Устилуг</p>
-            <p>Румунія</p>
-            <p>Молдова</p>
-            <p>Грушів</p>
+            <h3>Через які пункти пропуску найкраще виїжджати?</h3>
+              <p>Ягодин<br>
+              Устилуг<br>
+              Румунія<br>
+              Молдова<br>
+              Грушів</p>
           </li>
         </ul>
       </div>
@@ -490,27 +482,17 @@
   <footer class="footer">
     <div class="container">
       <div class="footer__inner">
-        <div class="footer__title">Приеднуйся до нашого телеграм каналу, щоб не пропустити корисну інформацію</div>
-        <div class="channels">
-          <!-- <a href="https://t.me/Help_For_Ukraine_7x24" class="channels__item">
+        <div class="footer__left">
+          <div class="footer__title">Приеднуйся до нашого телеграм каналу, щоб не пропустити корисну інформацію</div>
+          <a href="https://t.me/bezcordona" class="footer__tg">
             <i class="icon fab fa-telegram"></i>
             <p>Наш Телеграм канал</p>
-            <p>основной</p>
-          </a> -->
-          <a href="https://t.me/bezcordona" class="channels__item">
-            <i class="icon fab fa-telegram"></i>
-            <p>Наш Телеграм канал</p>
-            <p>второй</p>
           </a>
-          <!-- <a href="https://t.me/Vola_Nezaleznist_24x7" class="channels__item">
-            <i class="icon fab fa-telegram"></i>
-            <p>Для термінового зв'язку</p>
-            <p>заказов и консультаций пишите сюда</p>
-          </a> -->
-        </div>
-        <div class="footer__content">
-          <p class="footer__content-one">Час роботы з 10:00 до 20:00</p>
           <button class="button">Залишити заявку</button>
+        </div>
+
+        <div class="footer__right">
+          <a href="#legal" class="footer__scroll-top"><img src="img/free-icon-eject-148749.png" alt=""></a>
         </div>
       </div>
     </div>
